syntax = "proto3";

package resetpswdpb;

import "google/api/annotations.proto";

message ResetPasswordRequest{
    string id = 1;
}

message ResetPasswordResponse{
    string message = 1;
    int32 code = 2;
    string verify_code = 3;
}

service ResetPasswordService{
    rpc ResetPassowrdUserService (ResetPasswordRequest) returns (ResetPasswordResponse){
        option (google.api.http) = {
            get: "/v1/user/setpassword/{id}"
		};
    }
}